# MonoGame.Library.Stb

./: .gitignore  .gitmodules  Build.sln  README.md
.github/workflows/: main.yml
native/: CMakeLists.txt
native/src/: monogame_stb.c
